# colabradoodle

./: .cursorrules  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  router.py  setup.py
.github/workflows/: test.yml
agents/: base.py  doodle.py
mcp/server/: __init__.py  doodle_server.py  server.py
mcp_registry/: __init__.py  __main__.py  server.py
scripts/: test_doodle_interactive.py
src/mcp/server/: doodle_server.py
src/mcp_registry/: server.py
tests/: conftest.py  test_doodle_server.py  test_registry_server.py  test_router.py
utils/: log_config.py
