[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project]
name = "colabradoodle"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name="Leon van Bokhorst", email="post@leonbokhorst.com" }
]
dependencies = [
    "numpy==1.24.3",
    "pytest-asyncio==0.24.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
